syntax = "proto3";

package lightning.wire.lightningMessages.generated;

import "lightning/wire/types.proto";

message QueryChannelRange {
  uint32 type = 1 [(bits) = 16];
  string chain_hash = 2 [(hex) = true, (length) = 32];
  uint32 first_blocknum = 3;
  uint32 number_of_blocks = 4;
}
