syntax = "proto3";

package lightning.wire.lightningMessages.generated;

import "lightning/wire/types.proto";

message QueryShortChannelIds {
  string chain_hash = 1 [(hex) = true, (length) = 32];
  string encoded_short_ids = 5  [(hex) = true];
}
