syntax = "proto3";

package lightning.wire.lightningMessages.generated;

import "lightning/wire/types.proto";

message ReplyShortChannelIdsEnd {
  uint32 type = 1 [(bits) = 16];
  string chain_hash = 2 [(hex) = true, (length) = 32];
  uint32 complete = 3 [(bits) = 8];
}
